<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:context=".ChangePwdActivity" >

    <include layout="@layout/top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:text="@string/xiu_now_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/space_14" />

        <EditText
            android:id="@+id/chang_now_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/xiu_input_now_pwd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gar"
            android:textSize="@dimen/space_14" />
    </LinearLayout>

    <View style="@style/view_styles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:text="@string/zhao_mima"
            android:textColor="@color/black"
            android:textSize="@dimen/space_14" />

        <EditText
            android:id="@+id/chang_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/xiu_input_new_pwd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gar"
            android:textSize="@dimen/space_14" />
    </LinearLayout>

    <View style="@style/view_styles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:text="@string/xiu_queren"
            android:textColor="@color/black"
            android:textSize="@dimen/space_14" />

        <EditText
            android:id="@+id/chang_queren_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/xiu_input_queren"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gar"
            android:textSize="@dimen/space_14" />
    </LinearLayout>

    <TextView
        android:id="@+id/queren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/sub_bg"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/queren"
        android:textColor="@color/white"
        android:textSize="@dimen/space_20" />

</LinearLayout>