<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MineInfromationActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <include layout="@layout/top"/>
        
        <LinearLayout 
            android:id="@+id/mine_line_touxiang"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="click1"
            android:background="@drawable/me_btn"
            android:layout_marginTop="20dp">
            
            <TextView 
                android:id="@+id/min_touxing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_touxing"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/space_14"
                android:layout_marginLeft="25dp"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <ImageView 
                android:id="@+id/mine_tou"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:src="@drawable/default_head_icon" />
            
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/mine_line_nicheng"
            style="@style/linear_style"
            android:onClick="click1"
            android:layout_marginTop="15dp"
            android:background="@drawable/me_btn">
            
            <TextView 
                android:id="@+id/min_nicheng_text"
                android:text="@string/min_nicheng"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <TextView 
                android:id="@+id/mine_nicheng"
                style="@style/mine_textview3_styles"/>
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        
        <View style="@style/view_styles"/>
        
        <LinearLayout 
            android:id="@+id/mine_line_shouji"
            style="@style/linear_style"
            android:onClick="click1"
            android:background="@drawable/me_btn">
            
            <TextView 
                android:id="@+id/min_shouji_text"
                android:text="@string/min_phone"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <TextView 
                android:id="@+id/mine_shouji"
                android:text="15823092345"
                style="@style/mine_textview3_styles"/>
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        
        <View style="@style/view_styles"/>
        
        <LinearLayout 
            android:id="@+id/mine_line_changepwd"
            style="@style/linear_style"
            android:onClick="click1"
            android:background="@drawable/me_btn">
            
            <TextView 
                android:id="@+id/min_changepwd_text"
                android:text="@string/min_changepwd"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/mine_line_sex"
            style="@style/linear_style"
            android:onClick="click1"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:background="@drawable/me_btn">
            
            <TextView 
                android:id="@+id/min_sex_text"
                android:text="@string/min_sex"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <TextView 
                android:id="@+id/mine_sex"
                android:text="女"
                style="@style/mine_textview3_styles"/>
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        
        <View style="@style/view_styles"/>
        
        <LinearLayout 
            android:id="@+id/mine_line_birthday"
            style="@style/linear_style"
            android:onClick="click1"
            android:visibility="gone"
            android:background="@drawable/me_btn">
            
            <TextView 
                android:id="@+id/min_birthday_text"
                android:text="@string/min_birthday"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <TextView 
                android:id="@+id/mine_birthday"
                android:text="1991-11-11"
                style="@style/mine_textview3_styles"/>
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        <View style="@style/view_styles"/>
        
        <LinearLayout 
            android:id="@+id/mine_line_address"
            style="@style/linear_style"
            android:onClick="click1"
            android:visibility="gone"
            android:background="@drawable/me_btn">
            
            <TextView 
                android:id="@+id/min_address_text"
                android:text="@string/min_address"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <TextView
                style="@style/textview_styles"  />
            
        </LinearLayout>
        <View style="@style/view_styles"
            android:visibility="gone"/>
        
        <LinearLayout 
            android:id="@+id/mine_line_jifeng"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            
            <TextView 
                android:id="@+id/min_jifeng_text"
                android:text="@string/min_jifen"
                style="@style/mine_textview2_styles"/>
            
            <TextView
                style="@style/mine_textview1_styles"/>
            
            <TextView 
                android:id="@+id/mine_jifeng"
                android:text="8890"
                android:layout_marginRight="28dp"
                style="@style/mine_textview3_styles"/>
            
        </LinearLayout>
        
        <TextView 
            android:id="@+id/layout"
            android:onClick="click1"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/space_20"
            android:background="@drawable/sub_bg"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp"/>
        
    </LinearLayout>

</ScrollView>
